fixed filemporium dates

--- a/cv.tex
+++ b/cv.tex
@@ -71,8 +71,15 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
-\begin{rSubsection}{Softswiss Casino Software}{October 2014 - Present}{Senior Software Engineer}{Minsk, Belarus}
-~
+\begin{rSubsection}{Filemporium}{May 2015 - Present}{Clojure Developer}{Remote via Upwork}
+\item Added support for using arbitrary npm libraries from ClojureScript code
+% ~
+\end{rSubsection}
+
+\begin{rSubsection}{Softswiss Casino Software}{October 2014 - May 2015}{Senior Software Engineer}{Minsk, Belarus}
+\item Implemented integrations with external game providers (CasinoTechnology, Fengaming)
+\item Implemented completely custom design for new customer (HTML/CSS)
+\item Worked on external wallet api implementation
 \end{rSubsection}
 
 \begin{rSubsection}{Rubyroid Labs, LLC}{April 2014 - September 2014}{Senior Software Engineer/Team Leader}{Minsk, Belarus}
@@ -151,7 +158,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 %   INTERESTS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{What I'm currently interested in (not implies proficiency)}
+\begin{rSection}{Growth directions}
   \smallskip
   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
@@ -159,13 +166,13 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item Rewriting logic (Maude system in particular)
   \item Minimal syntax programming languages: Lisp (Clojure, Common Lisp, Scheme,
         Qi/Shen), FORTH, Factor, APL, Refal, Rebol, Smalltalk
-  \item Programming music (Overtone, Extempore) and visuals (Quil, Processing, Fluxus).
-  \item Learning to draw.
+  \item Programming music (Overtone, Extempore) and visuals (Quil, Processing, Fluxus)
+  \item Learning to draw
   \item Trying to understand how all people think, what are the differences between ways
-        people think, and what ways of thinking are possible but not currently used by human beings.
-  \item General semantics.
-  \item Personality models/typologies (MBTI/Socionics, Afanasiev's typology, Big 5, HEXACO).
-  \item Constructed languages.
+        people think, and what ways of thinking are possible but not currently used by human beings
+  \item General semantics
+  \item Personality models/typologies (MBTI/Socionics, Afanasiev's typology, Big 5, HEXACO)
+  \item Constructed languages
   \end{list}
 \end{rSection}
 
