Dropped personality typologies, added neuroscience

--- a/cv.tex
+++ b/cv.tex
@@ -171,8 +171,8 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item Trying to understand how all people think, what are the differences between ways
         people think, and what ways of thinking are possible but not currently used by human beings
   \item General semantics
-  \item Personality models/typologies (MBTI/Socionics, Afanasiev's typology, Big 5, HEXACO)
   \item Constructed languages
+  \item Neuroscience
   \end{list}
 \end{rSection}
 
