Added work to filemporium project

--- a/cv.tex
+++ b/cv.tex
@@ -73,6 +73,8 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSubsection}{Filemporium}{May 2015 - Present}{Clojure Developer}{Remote via Upwork}
 \item Added support for using arbitrary npm libraries from ClojureScript code
+\item Added compile-time template checks to kioo templating library
+\item Converted project from leiningen to boot
 % ~
 \end{rSubsection}
 
