cut address. general semantics -> semantics

--- a/cv.tex
+++ b/cv.tex
@@ -21,7 +21,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Ales Guzik} % Your name
-\address{Lopatina st. 3-89 \\ Minsk, Belarus 220125} % Your address
+\address{Minsk, Belarus} % Your address
 \address{+375~29~575-1103 \\ me@aguzik.net} % Your phone number and email
 
 \begin{document}
@@ -172,7 +172,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item Learning to draw
   \item Trying to understand how all people think, what are the differences between ways
         people think, and what ways of thinking are possible but not currently used by human beings
-  \item General semantics
+  \item Semantics
   \item Constructed languages
   \item Neuroscience
   \end{list}
