--- a/cv.tex
+++ b/cv.tex
@@ -179,6 +179,12 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item I am an active ACM and ACM SIGPLAN member.
   \item One of my primary interests is programming languages. I am still thinking of one
         that would be perfectly expressive. I have plans for PhD in that field.
+  \item I write tests very rarely and when I feel I wish to write one, I know that
+    I should search for more simple solution that will be obviously working and not
+    require any iterative validation. I do not believe that writing tons
+    of tests may lead to good system design. More often it leads to design that is hard to change
+    in any meaningful way. Instead of going test-first I go think-first, and don't start writing
+    code until I clearly know what I'm going to write and why.
   \end{list}
 \end{rSection}
 
