--- a/cv.tex
+++ b/cv.tex
@@ -79,13 +79,10 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   Fixed project build time (full recompilation now takes just a couple of minutes
   instead of an hour). Adjusted project code to work with reloaded workflow.
 \item Documented project structure, project-specific code conventions, technical decisions, troubleshooting, and Amazon S3 project-specific step-by-step configuration guide
-\item Refactored most of the project
-\item Added config file validation
-\item Cleaned up garbage logging (like {\tt (println "!!! FOO:" x)}) and implemented
-  propper configurable logging throughout the system
-\item Implemented chunked file upload with automatic reconnection
 \item Implemented production-ready multiserver setup with zero-downtime deployment using NixOS/NixOps and Consul
-\item Implemented lots of functionality and fixed lots of bugs
+\item Refactored most of the project, implemented lots of functionality and fixed lots of bugs (e.g added
+  config schema validation, cleaned up garbage logging (like {\tt (println "!!! FOO:" x)}) and implemented
+  propper configurable logging throughout the system, implemented chunked file upload with automatic reconnection, etc.)
 \item Interviewed potential candidates
 \item Regularly did code reviews
 \item Did pair programming (to assist others with complicated tasks, to share project knowledge, to get
@@ -169,10 +166,11 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item First program in BASIC at age of 11, first HTML and JavaScript at 12, first program in Pascal at 13.
   \item I started playing with Linux when I was 14 (it was Mandrake 10 in 2005)
   \item I use Dvorak keyboard layout
+  \item I use Archlinux with lots of handwritten scripts and i3 tiling window manager as my work environment.
   \item I tend to automate everything I could.
   \item I started using Emacs at 2010 and never looked back. Since 2011 I use it with Evil (vim emulation layer)
-  \item I have a lot of personal opensource projects and have contributed to
-        upstream of at least 20 opensource projects.
+  \item I have dozens of personal opensource projects and have contributed to
+        upstream of at least 20 other.
   \item Some time ago I was passionate about japanese animation, so I learned
         some japanese and passed an international exam (JLPT4 certificate). I remember myself
         learning Esperanto and Toki Pona, and now I am learning Lojban.
