update address and phone

--- a/cv.tex
+++ b/cv.tex
@@ -21,8 +21,10 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Ales Guzik} % Your name
-\address{Minsk, Belarus} % Your address
-\address{+375~29~575-1103 \\ me@aguzik.net} % Your phone number and email
+% \address{Minsk, Belarus} % Your address
+% \address{+375~29~575-1103 \\ me@aguzik.net} % Your phone number and email
+\address{Minsk, Belarus (currently live in Kiev, Ukraine)} % Your address
+\address{+380~97~033-1145 \\ me@aguzik.net} % Your phone number and email
 
 \begin{document}
 
