update BSUIR TA info

--- a/cv.tex
+++ b/cv.tex
@@ -127,9 +127,12 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 \end{rSubsection}
 
 \begin{rSubsection}{\parbox[t][2em][t]{9cm}{Belarusian State University of Informatics and Radioelectronics}}{February 2013 - January 2014 }{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
+\item Taught first-year students programming in C.
+\item Taught fourth-year students IP networking.
 \item Taught students how to use Git and GitHub.
 \item Together with students formalized grading criteria.
 \item Formalized some code quality metrics.
+\item Regularly reviewed students' code.
 \item Taught Linux for interested students in my spare time.
 \end{rSubsection}
 
