--- a/cv.tex
+++ b/cv.tex
@@ -202,7 +202,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item Programming paradigms and programming languages
   \item Rewriting logic (Maude system in particular)
   \item Minimal syntax programming languages: Lisp (Clojure, Common Lisp, Scheme,
-        Qi/Shen), FORTH, Factor, APL, Refal, Rebol, Smalltalk
+        Qi/Shen), FORTH, Factor, APL, Tcl, Refal, Rebol, Smalltalk
   \item Programming music (Overtone, Extempore) and visuals (Quil, Processing, Fluxus)
   \item Learning to draw
   \item Semantics
