rollback to Guzik, with Huzik in italics

--- a/cv.tex
+++ b/cv.tex
@@ -20,7 +20,7 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Ales Huzik} % Your name
+\name{Ales Guzik {\it(Ales Huzik)}} % Your name
 % \address{Minsk, Belarus} % Your address
 % \address{+375~29~575-1103 \\ me@aguzik.net} % Your phone number and email
 \address{Minsk, Belarus (currently live in Kiev, Ukraine)} % Your address
