--- a/cv.tex
+++ b/cv.tex
@@ -20,11 +20,11 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Ales Guzik {\it(Ales Huzik)}} % Your name
+\name{Ales Huzik} % Your name
 % \address{Minsk, Belarus} % Your address
 % \address{+375~29~575-1103 \\ me@aguzik.net} % Your phone number and email
-\address{Minsk, Belarus (currently live in Kiev, Ukraine)} % Your address
-\address{+380~97~033-1145 \\ me@aguzik.net} % Your phone number and email
+\address{Sydney, Australia} % Your address
+\address{+61~427~990-909 \\ me@aguzik.net} % Your phone number and email
 
 \begin{document}
 
@@ -73,7 +73,46 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
-\begin{rSubsection}{Filemporium}{July 2015 - Present}{Lead Clojure Developer}{Remote via Upwork}
+\begin{rSubsection}{Atlassian}{December 2016 - Present}{Senior Clojure Developer}{Sydney, Australia}
+
+% At the moment I have worked only 7.5 months. It is somewhat hard to evaluate my own performance, as I always think that I could have done so much more. Also, because I often tend to be interested in big, architecture-level changes, they go slower than I'd wish and it's harder to show. Nevertheless, since I joined the team I have done the following things:
+% - maintainability improvements:
+%   - reorganization of the code base
+%     - decluttered repository toplevel
+%     - cleaned up obsolete/abandoned branches (with automatic script to do that periodically)
+%   - shrinked application bundle size twice (from 100mb to 50mb), which made deployments noticeably faster
+%   - formulated automated versioning strategy in a way that does not require conscious effort from the developers, and is helpful for the server team to understand amount and severity of changes.
+%   - proposed and added jvm memory consumption metrics, so we can see when GC happens and can understand it's implications on the dynamic behavior of the system
+% - productivity
+%   - automation of manual deployments. allows developers to test changes in ddev/adev/staging faster. instead of commiting, and clicking your way through bamboo you can deploy your local code tree directly with just one command.
+%   - automation of versioning. Developers don't need to review all code changes since last version change and manually edit the version. After a while you don't even notice that you are doing versioning.
+% - Readability and understandability of the code
+%   - Insisted on starting doing proper code reviews. Found a compromise to start doing that after going 100% GA
+%   - created a glossary of terms for increasing consistency and noticing ambiguities in naming we use, so that we can improve it.
+%   - have been doing code reviews. gave suggestions on improving naming
+%   - insisted on strict adherence to our code style guide
+% - Architecture
+%   - Reworking build process (cleaned up a lot of obsolete stuff, simplified clojurescript and uberjar build process, working on splitting synchrony into smaller subprojects)
+%   - Dockerization
+%   - Grand vision of splitting synchrony into smaller, easier to maintain pieces
+%     - part 1: clustering
+%       - extracted into synchrony-clustering microservice
+%       - synchrony part is decoupled from the mechanism of getting list of active nodes, so hazelcast-based (or even completely static) implementation can be created for ConfServer synchrony, keeping synchrony identical between cloud and server. 
+%     - part 2: accepting client connections and routing them to correct synchrony processing nodes
+%       - have been accepted as a valuable option by Tobias
+%       - prerequisites for the implementation have been tested
+%       - turned out impossible to implement due sticky sessions being unsupported for websockets in AWS, and direct connections to nodes being disallowed by micros
+%       - investigated an option to use Kubernetes (at that moment it turned out to not be ready for deploying production services)
+%       - have recently found a way to overcome the limitations of aws/micros, so desired architecture could be implemented in a relatively straightforward way. will pursue it after finishing rework of the build pipeline 
+%   - Led Synchrony Architecture Bootcamp (02/05/2017).
+%   - Participated in architecture review (05/06/2017).
+% - Got into Ship-It finals
+% Other than that I have participated in interviewing potential candidates, have been helping with onboarding, have been pairing with other team members, doing on-call job, and working with support to investigate customer issues (sometimes during after hours). 
+% Regarding company values - most of the stuff above is BTCYS, which is the value that resonates the most with me. Help with onboarding, pairing, substituting other team members for on-call time is PAAT. Working with support investigating customer issues, and regular work to make Synchrony more stable/reliable is DFTC. I think that calling up on issues with the codebase and Tobias could be labeled as OCNB, though I'm still unsure if my actions were right.
+~
+\end{rSubsection}
+
+\begin{rSubsection}{Filemporium}{July 2015 - December 2016}{Lead Clojure Developer}{Remote via Upwork}
 \item Setup temporary deplyoment via docker and dokku
 \item Revised architecture in a way that drastically simplified client-side
   state management and allowed live page update of all active user sessions
